# Digimon-Project

./: .gitignore  README.md
digimon-card-api/: Cargo.toml
digimon-card-api/src/: photo.rs  query.rs
digimon-card-core/: Cargo.toml
digimon-card-front/: package-lock.json  package.json
digimon-card-front/src/: App.tsx
digimon-card-front/src/component/fight/: AttackField.tsx
digimon-core/: Cargo.toml  build.gradle  settings.gradle
digimon-core/src/: core.rs  main.rs
digimon-core/src/core/: domain.rs
digimon_card_api/: Cargo.toml
digimon_card_api/digimon_card_core/: Cargo.toml
digimon_card_api/digimon_card_core/src/core/domain/model/: status.rs
digimon_card_api/digimon_card_core/src/core/domain/model/character/: digimon.rs
digimon_card_api/digimon_card_core/src/core/domain/model/fight/: damage.rs
digimon_card_api/digimon_card_core/src/core/domain/use_case/: attack.rs
digimon_card_api/digimon_card_core/src/core/domain/use_case/recovery/: recover_hit_point.rs
digimon_card_api/src/: api.rs  main.rs  mutation.rs
digimon_card_api/src/api/: persistence.rs  sample.rs
digimon_card_api/src/api/config/: graphql.rs
digimon_card_api/src/api/config/graphql/: mutation.rs  query.rs  schema.rs
digimon_card_api/src/api/dto/: graphql.rs
digimon_card_api/src/api/dto/graphql/: attack_enemy.rs  be_attacked.rs  fight.rs  human.rs  status.rs
digimon_card_api/src/api/dto/graphql/fight/: attack_enemy.rs  be_attacked.rs
digimon_card_api/src/api/dto/graphql/status/: hit_point.rs
digimon_card_api/src/api/persistence/: graphql.rs
digimon_card_api/src/api/persistence/graphql/: mutation.rs  query.rs
digimon_card_core/: Cargo.toml
digimon_card_core/src/: lib.rs
digimon_card_core/src/core/: domain.rs
(+87 files in other folders)
