[package]
name = "digimon_card_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]

members = [
    "digimon_card_core",
]

[dependencies]
actix-rt = "2.6.0"
async-graphql = "4.0.14"
async-graphql-actix-web = "4.0.14"
actix-web = { version = "4.0.0-beta.13", default-features = false }
once_cell = "1.8.0"

digimon_card_core = { path = "digimon_card_core" }

